# trainer

./: .cursorignore  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  example.trainer_secrets.py  pyproject.toml
scripts/: fetch_finbif.py  fetch_inaturalist.py
tests/: test_annotations.py  test_detect.py  test_training.py
trainer/: app.py  bg.py  db.py  images.py  inference.py  quality_training.py  training.py
trainer/routes/: __init__.py  annotate.py  api.py  models.py  projects.py
trainer/static/css/: annotate.css  base.css
trainer/templates/: annotate.html  annotation_gallery.html  base.html  evaluate.html  index.html  project.html  quality_gallery.html
