[project]
name = "trainer"
version = "0.1.0"
description = "ML training for image management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trainer"]
